public/styles/global-styles.css
/* CSS DOCUMENT */

/* credit to codepen.io/ffoodd for visually-hidden styling */
.visually-hidden {
	border: 0 !important;
	clip: rect(1px, 1px, 1px, 1px) !important;
	-webkit-clip-path: inset(50%) !important;
	clip-path: inset(50%) !important;
	height: 0px !important;
	margin: -1px !important;
	overflow: hidden !important;
	padding: 0 !important;
	position: absolute !important;
	width: 0px !important;
	white-space: nowrap !important;
}
.visually-hidden-focusable:focus,
.visually-hidden-focusable:active {
	clip: auto !important;
	-webkit-clip-path: none !important;
	clip-path: none !important;
	height: auto !important;
	margin: auto !important;
	overflow: visible !important;
	width: auto !important;
	white-space: normal !important;
}

.display-none {
	display: none !important;
}

@keyframes unmount {
	100% {
		filter: opacity(0);
	}
}

.anim-unmount {
	animation: unmount ease-out var(--nav-anim-duration) forwards;
}

@keyframes mount {
	0% {
		transform: translateX(10px);
		filter: opacity(0);
	}
	100% {
		transform: translateX(0);
		filter: opacity(1);
	}
}

.anim-mount {
	animation: mount ease-out var(--nav-anim-duration);
}

